<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goossens.glenn.a6weekfitnessworkout.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/home_welcome" />

    <Button
        android:text="@string/home_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:id="@+id/home_workouts" />

    <Button
        android:text="@string/home_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_workouts"
        android:layout_alignStart="@+id/home_workouts"
        android:layout_marginTop="29dp"
        android:id="@+id/home_diet" />

    <Button
        android:text="@string/home_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_diet"
        android:layout_alignStart="@+id/home_diet"
        android:layout_marginTop="27dp"
        android:id="@+id/home_about" />
</RelativeLayout>
