<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goossens.glenn.a6weekfitnessworkout.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/about_scroll" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/about_title"
                android:text="@string/about_title"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_p1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/about_title"
                android:text="@string/about_p1"
                android:singleLine="false"/>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/about_p2"
                android:layout_below="@id/about_p1"
                android:text="@string/about_p2"
                android:singleLine="false"/>

            <TextView
                android:text="@string/about_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_p2"
                android:id="@+id/about_footer"
                android:layout_marginTop="10dp"
                android:textSize="8sp"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
